--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "^4.13.0",
+    "nouislider": "^14.0.3",
+    "sass-loader": "^8.0.0",
+    "vue-lazyload": "^1.3.3",
+    "vue-template-compiler": "^2.6.10",
+    "vue2-transitions": "^0.3.0"
   },
   "eslintConfig": {
     "root": true,
