--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   },
   "main": "background.js",
   "dependencies": {
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "electron": "^7.2.4",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.0",
-    "nouislider": "^14.0.3",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-electron-builder": "^1.4.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "babel-eslint": "^10.1.0",
+    "electron": "^9.1.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "nouislider": "^14.6.0",
+    "sass-loader": "^9.0.2",
+    "vue-cli-plugin-electron-builder": "^2.0.0-rc.4",
     "vue-lazyload": "^1.3.3",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.11",
     "vue2-transitions": "^0.3.0"
   },
   "eslintConfig": {
